[project]
name = "mlb-live-scoreboard"
description = "Home Assistant custom integration for live MLB scoreboards via ESPN."
requires-python = ">=3.12"
dynamic = ["version"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["__pycache__"]

[tool.ruff.lint]
# Conservative ruleset — favors readability/safety over taste-based rewrites
# so it won't churn untouched code. Add rules over time as confidence grows.
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes (unused imports, undefined names)
    "W",      # pycodestyle warnings
    "I",      # isort import ordering
    "B",      # flake8-bugbear (likely bugs)
    "UP",     # pyupgrade (modern syntax)
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # function call as default argument (used by HA / voluptuous patterns)
    "SIM108", # ternary-vs-if-else (subjective)
]

[tool.ruff.lint.per-file-ignores]
# Tests can use star imports / be more relaxed
"tests/**" = ["F401", "F403", "B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    # Home Assistant emits these during import; harmless for our purposes.
    "ignore::DeprecationWarning:homeassistant.*",
    "ignore::PendingDeprecationWarning",
]
